--- a/Landing/src/index.css
+++ b/Landing/src/index.css
@@ -2,9 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
 .my-button-container .login-button {
-  color: red;
+  color: #ee00ff;
   background-color: rgb(250, 250, 255);
-  border: 3px solid #6b7280;
+  font-weight: bolder;
+  border: 4px solid #ee00ff;
 }
 
 .my-button-container .internal-button {
