--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@ body {
   height: max-content;
   margin: 0;
   padding: 64px 32px;
-  background-color: #140C1F;
+  background-color: #a99fb8;
   background-image: url('../public/coverImage.png');
   background-position: center;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
